KAlarm

=== Version 1.3.6 --- 10 January 2006 ===
Make autoclose of message windows work.
Fix New From Template not creating alarm if template contents are not changed.
Ensure that day and month names translations are independent of locale calendar.
Display alarm message windows within current screen in multi-head systems.

=== Version 1.3.5 --- 14 December 2005 ===
Fix email attachments being forgotten when saving alarms.
Fix toolbar configuration being lost after quitting KAlarm.

=== Version 1.3.4 --- 2 October 2005 ===
Fix incorrect recurrence frequency in Alarm Edit dialogue's Alarm tab.

=== Version 1.3.3 --- 22 September 2005 ===
Add day-of-week selection to daily recurrence dialog.

=== Version 1.3.2 (KDE 3.5 beta 1) --- 10 September 2005 ===
Add option to show alarms in KOrganizer's active calendar.
Add option for email text alarms to locate the email in KMail.
When email alarm triggers and KMail isn't running, start KMail and send mail
    automatically instead of opening KMail composer window.
Provide per-alarm option for yearly February 29th recurrences.
Wait longer (20 seconds) before reporting alarm daemon registration failed.
Minimise KMix window if KMix is started by KAlarm when displaying a message.
Fix Plastik style 'enabled' indication for time spinbox left-hand buttons.
Prevent message windows always being full screen after a big message is shown.
Prevent message windows being initially larger than the desktop.
Prevent message windows initially overlapping the KDE panel.
Prevent session restoration displaying main windows which should be hidden.
Fix alarms getting stuck if due during a daylight savings clock change.
Change --volume command line option short form to -V (-v is used by --version).
Fix reported shell errors when output from command alarm is discarded.
Use 'KAlarm' untranslated in calendar product ID, to cater for locale changes.

=== Version 1.3.1 --- 30 May 2005 ===