@@ -5,6 +5,7 @@ Make autoclose of message windows work.
 Fix New From Template not creating alarm if template contents are not changed.
 Ensure that day and month names translations are independent of locale calendar.
 Display alarm message windows within current screen in multi-head systems.
+Reduce size of Preferences dialog to fit in 1024x768 screen.
 
 === Version 1.3.5 --- 14 December 2005 ===
 Fix email attachments being forgotten when saving alarms.
